yoshimi 1.5.8 M

2018-8-19 Will
* Added GUI warning when active part disabled.
* Removed some redundant test code.

2018-8-18 Rob
* Initialise and freshen MasterUI->activePart.

2018-8-18 Will
* Improved patch load behaviour crossing CLI / GUI.
* Started work on CLI kitmode.
* BugFix: Saving to bank not updating GUI.

2018-8-17 Will
* Implemented read most CLI min, max, default
  for formally defined ones.
* Implemented most CLI Mlearn initialisation
  for formally defined ones.
  Can't cancel from CLI though and non-learnable
  ones appear to learn.
* Added CLI help info to new controls.

2018-8-16 Will
* BugFix: CLI not setting some values
  and not reading any :(
* Started on CLI for reading min, max, default.

2018-8-15 Will
* All GUI default requests now set by limits.
  This is a major refactoring, considerably
  reducing the duplication in the GUI and adding
  more functionality.
  Some switches don't yet update, but are correct.

2018-8-14 Will
* Added missing conversions in FilterUI.fl
* Added missing conversions in EnvelopeUI.fl
* BugFix: EffUI.fl updates incomplete :(
* Added missing conversions in LFOUI.fl

2018-8-13 Will
* Separated system and insert control names.
* Updated docs.
* Added missing conversions in EffUI.fl

2018-8-12 Will
* Reorganised and combined XML & history types.
  History lists now identified by name.
* More 'type' and 'control' conversions in CLI.
* Small GUI updates/corrections.

2018-8-7 Will
* BugFix: Corrected wrong operator use.
  Was || when it should have been |
* Envelope limits done.

2018-8-6 Will
* Found more missing conversions :(

2018-8-5 Will
* Updated addSynth limits.
* Updated padsynth limits.
* Updated subSynth limits.
* Updated controller limits.
* Completed sys/ins control change.
  Envelope defaults still to do.

2018-8-4 Will
* BugFix: MIDI-learn Cancel.
  It was only pretending to :(
* Updated Microtonal.cpp limits.
* MicrotonalUI.fl converted to enums.
* Updated SynthEngine.cpp limits.