@@ -30,8 +30,19 @@ using namespace std;
 #include "Interface/InterChange.h"
 #include "Effects/EffectMgr.h"
 
-// all_fx and ins_fx MUST be the first two
-typedef enum { all_fx = 0, ins_fx, conf_lev, vect_lev, scale_lev, learn_lev, part_lev, } level_bits;
+/*
+ * These are all handled bit-wise so that you can set several
+ * at the same time. e.g. part, addSynth, resonance.
+ * There is a function that will clear just the highest bit that
+ * is set so you can then step back up the level tree.
+ * It is also possible to zero it so that you immediately go to
+ * the top level.
+ * Therefore, the sequence is important.
+ * 12 bits are currently defines out of a possible 32.
+ *
+ * all_fx and ins_fx MUST be the first two
+ */
+typedef enum { all_fx = 0, ins_fx, conf_lev, vect_lev, scale_lev, learn_lev, part_lev, addSynth_lev, subSynth_lev, padSynth_lev, addVoice_lev, resonance_lev,} level_bits;
 
 typedef enum { todo_msg = 0, done_msg, value_msg, name_msg, opp_msg, what_msg, range_msg, low_msg, high_msg, unrecognised_msg, parameter_msg, level_msg, available_msg,} error_messages;
 
