@@ -3,6 +3,11 @@ yoshimi 1.5.8 M
 2018-8-19 Will
 * Added GUI warning when active part disabled.
 * Removed some redundant test code.
+* Added "Simple Bass" and "Hollow Ghost Ensemble
+  to "Will Godfrey Companion" bank.
+* Set up enums for further CLI control levels.
+* Improved high bit detection in MiscFuncs.cpp
+* Added high bit clearing to MiscFuncs.cpp
 
 2018-8-18 Rob
 * Initialise and freshen MasterUI->activePart.
